# crible

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  Dockerfile  IMPROVE.md  PRODUCT.md  PROGRESS.md  README.md  SECURITY.md  TODO.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  crawl-marathon.yml  import-prices.yml  pages.yml  refresh-data.yml  release.yml  stooq-download.yml
.impeccable/critique/: 2026-07-15T15-09-45Z__ui-src.md
docs/: CHANGELOG.md  CONTRIBUTING.md  DATA-SOURCES.md  INDICATORS.md  LAUNCH.md  README.md  TODO.md
docs/prds/: eodhd.md  fmp-ultimate.md
evals/: history.jsonl
evals/2026-07-12/: ANALYSIS.md  BACKLOG.json  REMEDIATION.md  RUNBOOK.md  TEST-PLAN.md  TEST-PLAN.template.md  VERIFY.honeypots.json  VERIFY.json  VERIFY.md  VERIFY.todo.json  analysis.json  eval.config.json  findings.json  findings.schema.json  index.html  index.md  judges.jsonl  opportunities.json  scorecard.json  verdicts.json
evals/2026-07-12-c2/: ANALYSIS.md  BACKLOG.json  COMPARE.md  REMEDIATION.md  RUNBOOK.md  TEST-PLAN.md  VERIFY.honeypots.json  VERIFY.json  VERIFY.md  VERIFY.todo.json  analysis.json  eval.config.json  findings.json  index.html  index.md  judges.jsonl  opportunities.json  scorecard.json  verdicts.json
evals/2026-07-14/: ANALYSIS.md  BACKLOG.json  BRAINSTORM.todo.md  COMPARE.md  REMEDIATION.md  TEST-PLAN.md  VERIFY.honeypots.json  VERIFY.json  VERIFY.md  VERIFY.todo.json  analysis.json  eval.config.json  eval.workflow.mjs  findings.json  index.html  index.md  judges.jsonl  opportunities.json  scorecard.json  verdicts.json
evals/2026-07-14-c2/: ANALYSIS.md  BACKLOG.json  BRAINSTORM.todo.md  COMPARE.md  REMEDIATION.md  VERIFY.honeypots.json  VERIFY.json  VERIFY.md  VERIFY.todo.json  analysis.json  eval.config.json  eval.workflow.mjs  findings.json  index.html  index.md  judge.correctness.json  judge.pipeline.json  judge.reliability.json  judges.jsonl  opportunities.json  scorecard.json  verdicts.json
evals/2026-07-14-c3/: BACKLOG.json  COMPARE.md  REMEDIATION.md  VERIFY.honeypots.json  VERIFY.json  VERIFY.md  VERIFY.todo.json  dimensions.json  eval.config.json  eval.workflow.mjs  findings.json  index.html  index.md  judges.jsonl  scorecard.json  verdicts.json
evals/2026-07-14-c4/: BACKLOG.json  COMPARE.md  REMEDIATION.md  VERIFY.honeypots.json  VERIFY.json  VERIFY.md  VERIFY.todo.json  eval.config.json  findings.json  index.html  index.md  judges.jsonl  scorecard.json  verdicts.json
evals/2026-07-15/: BACKLOG.json  COMPARE.md  REMEDIATION.md  VERIFY.json  VERIFY.md  VERIFY.todo.json  eval.config.json  findings.json  index.html  index.md  judges.jsonl  scorecard.json  verdicts.json
scripts/: notify-workflow-failure.sh  publish-data-release.sh  publish-data.sh  publish-demo-data.sh  publish-prices.sh  resolve-workflow-beacon.sh  seed-data.sh  seed-demo-data.sh
src/crible/: __init__.py  bootstrap.py  cli.py  config.py  mcp_server.py  presets.py  price_series.py  runtime.py  site_export.py  store.py  universe.py  universe_caps.py
srd/: BUILD-PLAN.json  BUILD-PLAN.md  SRD.json  SRD.md  TRACEABILITY.md  VERIFY.json  VERIFY.md  VERIFY.todo.json  brief.json  verdicts.json
srd/00-overview/: SCOPE.md  VISION.md
srd/architecture/: DATA-MODEL.md  INTERFACES.md  SYSTEM-CONTEXT.md
srd/competitive/: LANDSCAPE.md
srd/design/: ACCESSIBILITY.md  COMPONENTS.md  DESIGN-TOKENS.md  PRINCIPLES.md  SCREENS.md  design-tokens.json
srd/evidence/: EVIDENCE.md  evidence.json  meta.json
srd/requirements/: FUNCTIONAL.md  NON-FUNCTIONAL.md
tests/: test_api_prices.py  test_api_providers.py  test_api_search.py  test_audited.py  test_bootstrap_data.py  test_budget_state.py  test_captcha.py  test_clean.py  test_companies_house.py  test_crawler.py  test_cvm.py  test_dart.py  test_defeatbeta.py  test_demo_refresh.py  test_dsl_parity.py  test_edinet.py  test_export_site.py  test_fetch_requests.py  test_fr001_universe.py  test_fr002_ingest.py  test_fr003_compute.py  test_fr004_dsl.py  test_fr005_cli.py  test_fr006_api.py  test_fr008_compose.py  test_fr009_presets.py  test_fr010_esef.py  test_fr011_prices.py  test_fr012_company_detail.py  test_fr013_plugins.py  test_fr014_prds.py  test_fr015_ranks.py  test_fr016_edgar.py  test_fsds.py  test_fx.py  test_gleif.py  test_isin_backfill.py  test_mcp.py  test_mirror.py  test_mohanram.py  (+13 more)
ui/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
(+428 files in other folders)
