[project]
name = "crible"
version = "0.1.0"
description = "Self-hosted fundamental stock screener — worldwide universe, Europe-depth, zero-key by design"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "maxgfr" }]
requires-python = ">=3.12,<3.13"
dependencies = [
    "duckdb>=1.1",
    "pyarrow>=17",
    "pandas>=2.2",
    "financetoolkit>=2.1",
    "financedatabase>=2.4",
    "yfinance>=1.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "typer>=0.12",
    "httpx>=0.27",
]

[project.scripts]
crible = "crible.cli:app"

[dependency-groups]
dev = [
    "pytest>=8",
    "hypothesis>=6",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/crible"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 110
target-version = "py312"
