[project]
name = "crible"
version = "0.5.0"
description = "Self-hosted fundamental stock screener — worldwide universe, Europe-depth, zero-key by design"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "maxgfr" }]
requires-python = ">=3.12,<3.13"
dependencies = [
    "duckdb>=1.1",
    "pyarrow>=17",
    "pandas>=2.2",
    "financetoolkit>=2.1",
    "financedatabase>=2.4",
    "yfinance>=1.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "typer>=0.12",
    "httpx>=0.27",
    "mcp>=1.2",
]

[project.optional-dependencies]
# CAPTCHA OCR for the automated Stooq bulk download (crible stooq-download).
# Optional on purpose: pulls a small ONNX stack (onnxruntime + opencv + pillow),
# so `crible` core stays ML-free. Install with `uv sync --extra captcha`.
# CI note: ddddocr requires opencv-python (not headless) → the runner needs the
# system OpenGL lib (`apt-get install -y libgl1`); see .github/workflows/stooq-download.yml.
captcha = ["ddddocr>=1.6"]

[project.scripts]
crible = "crible.cli:app"

[dependency-groups]
dev = [
    "pytest>=8",
    "hypothesis>=6",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/crible"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.semantic_release]
# Automated releases from green pushes to main (.github/workflows/release.yml).
# Conventional commits drive the bump; `data-latest` is not a semver tag and
# is therefore invisible to semantic-release.
version_toml = ["pyproject.toml:project.version"]
version_variables = ["src/crible/__init__.py:__version__"]
tag_format = "v{version}"
commit_message = "chore(release): v{version} [skip ci]"
commit_author = "github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>"
major_on_zero = false
allow_zero_version = true

[tool.semantic_release.branches.main]
match = "main"

[tool.semantic_release.changelog]
# docs/CHANGELOG.md stays hand-written; generated notes go to the GitHub
# Release only (the workflow passes changelog: false).
exclude_commit_patterns = ["^chore\\(release\\):"]
